--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,17 @@ version = "0.0.1"
 edition = "2021"
 
 [workspace.dependencies]
+pg_escape = { version = "0.1.1", default-features = false }
 async-trait = "0.1"
-pg_replicate = { git = "https://github.com/Mooncake-Labs/pg_replicate", branch = "mooncake" }
+futures = { version = "0.3.31", default-features = false }
+pin-project-lite = { version = "0.2", default-features = false }
 tokio.version = "1.38"
 tokio-postgres = { git = "https://github.com/imor/rust-postgres", rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
+tracing = { version = "0.1", default-features = false }
+thiserror = "1.0"
+postgres-replication = { git = "https://github.com/imor/rust-postgres", default-features = false, rev = "20265ef38e32a06f76b6f9b678e2077fc2211f6b" }
+chrono = { version = "0.4", default-features = false }
+uuid = { version = "1.10.0", default-features = false }
+bytes = { version = "1.0" }
+serde_json = { version = "1.0", default-features = false }
+bigdecimal = { version = "0.4.6", default-features = false }
