--- a/src/moonlink_connectors/Cargo.toml
+++ b/src/moonlink_connectors/Cargo.toml
@@ -5,20 +5,21 @@ edition.workspace = true
 
 [dependencies]
 moonlink = { path = "../moonlink" }
-tokio.workspace = true
 tokio-postgres.workspace = true
 async-trait.workspace = true
 arrow.workspace = true
 chrono.workspace = true
 num-traits.workspace = true
 futures.workspace = true
-pin-project-lite.workspace = true
-tracing.workspace = true
 thiserror.workspace = true
+
 postgres-replication.workspace = true
-pg_escape.workspace = true
-bigdecimal.workspace = true
+tokio.workspace = true
 uuid.workspace = true
-serde_json.workspace = true
-bytes.workspace = true
-byteorder.workspace = true
+pg_escape = "0.1.1"
+pin-project-lite = "0.2"
+tracing = { version = "0.1", default-features = true }
+bigdecimal = { version = "0.4.6", features = ["std"] }
+serde_json = { version = "1.0", features = ["std"] }
+bytes = "1.0"
+byteorder = "1.5.0"
