--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,5 @@
 [workspace]
-members = [
-    "src/moonlink",
-    "src/moonlink_connectors",
-    "src/moonlink_backend",
-]
+members = ["src/moonlink", "src/moonlink_connectors", "src/moonlink_backend"]
 resolver = "2"
 
 [workspace.package]
@@ -13,7 +9,7 @@ edition = "2021"
 [workspace.dependencies]
 async-trait = "0.1"
 
-tokio-postgres = { git = "ssh://git@github.com/Mooncake-labs/rust-postgres.git"}
+tokio-postgres = { git = "https://github.com/Mooncake-labs/rust-postgres.git" }
 arrow = "54.2.1"
 thiserror = "2.0.12"
 parquet = "54.2.1"
@@ -22,6 +18,6 @@ futures = "0.3.31"
 multimap = "0.10.0"
 chrono = "0.4.40"
 num-traits = "0.2.19"
-postgres-replication = { git = "ssh://git@github.com/Mooncake-labs/rust-postgres.git" }
+postgres-replication = { git = "https://github.com/Mooncake-labs/rust-postgres.git" }
 tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
 uuid = { version = "1.15.1", features = ["v4"] }
